# frame-pinn-reference

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  __init__.py  allen_cahn_demo.py  eliminability.py  frame_mc.py  gitignore  navier_stokes_demo.py  paper.md  poisson_control.py  pyproject.toml  requirements.txt  residual.py  run_one.py  run_v01.py  stability.py  validation_report.json
.github/workflows/: ci.yml
benchmarks/: allen_cahn.py  burgers.py  navier_stokes.py
docs/: api.md  architecture.md  theory.md
examples/: burgers_demo.py  smoke_fast.py
experiments/: aggregate.py  validation.py  validation_report.md
experiments/seed_results/: allen_cahn.jsonl  burgers.jsonl  navier_stokes.jsonl
paper/: paper.bib
src/frame_pinn/: ordering.py  trainer.py  utils.py
tests/: test_benchmarks.py  test_eliminability.py  test_ordering.py  test_smoke.py
