[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-pinn"
version = "1.0.0"
description = "Structural diagnostics for physics-informed neural networks: eliminability, ordering defect, and stability."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matthew W. Loving" }]
keywords = [
    "physics-informed neural networks",
    "scientific machine learning",
    "diagnostics",
    "eliminability",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=1.13"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
examples = ["matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/mwloving/frame-pinn-reference"
Repository = "https://github.com/mwloving/frame-pinn-reference"

[tool.setuptools]
packages = ["frame_pinn", "benchmarks"]

[tool.setuptools.package-dir]
frame_pinn = "src/frame_pinn"
benchmarks = "benchmarks"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
